--- a/Round4/file43.Rmd
+++ b/Round4/file43.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Logistic Regression (main effects only, original space)"
+title: "Logistic Regression (quadratic form in augmented space)"
 author: "Jonathan Rosenblatt"
 date: "23/1/2019"
 output: html_document
@@ -9,12 +9,12 @@ editor_options:
 
 ```{r}
 n.permutations <- 3e2
-n.replications <-  5e2
+n.replications <-  1e2
 ```
 
 
 ```{r preliminaries}
-file.name <- "file40"
+file.name <- "file43"
 setwd('~/workspace/permuting_accuracy/Round4/')
 
 p <- 23
@@ -23,10 +23,13 @@ n.folds <- 4
 
 source('Gilron Effect of Cross Validatino.R')
 
-Sigma <- diag(p)
+Sigma0 <- diag(p)
+
 Sigma.inv <- solve(Sigma)
-beta0 <- rnorm(p)
-effects <- c(0,1,2)
+p.quadratic <- choose(p,2)
+p.total <- p+1+p.quadratic
+beta0 <- c(rep(0,p+1),rep(1,p.quadratic))
+effects <- c(0,0.25,0.5)
 ```
 
 
@@ -42,11 +45,14 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     ## Gaussian noise
     noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
-
+    noise.augment <- model.matrix(~.^2, as.data.frame(noise))
+    Sigma.inv <- makePrecision(noise.augment)
+    
     ## Logistic regression
-    # effect <- effects[[3]]
+    # effect <- effects[[1]]
+    # effect <- 3
     beta <- beta0*effect
-    link <- noise%*%beta
+    link <- noise.augment%*%beta
     probs <- plogis(link)
     # plot(probs, type='h')
     
@@ -54,20 +60,19 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     labels <- c(TRUE,FALSE)[rbinom(n,1, probs)+1] # group assignemt labels
     
     ## Compute observed statistic
-    x1 <- noise[labels,]
-    x2 <- noise[!labels,]
+    x1 <- noise.augment[labels,]
+    x2 <- noise.augment[!labels,]
     
     ## Asign observations to folds. Use the simple label structure to balance folds.
     fold.ids <- balanced_folding(labels, n.folds, balance = TRUE)
     # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
-    ts <-statistics(x1 = x1, 
-                    x2 = x2, 
-                    Sigma.inv = Sigma.inv, 
-                    noise = noise, 
-                    labels = labels, 
-                    fold.ids = fold.ids)
+    ts <-statisticsNoOracle(x1 = x1, 
+                            x2 = x2,
+                            noise = noise, 
+                            labels = labels, 
+                            fold.ids = fold.ids)
     
     # Prepare to permute
     old.labels <- labels
@@ -81,15 +86,14 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       
       labels <- sample(labels) # label switching
       fold.ids <- balanced_folding(labels, n.folds, TRUE) # refold
-      x1 <- noise[labels,]
-      x2 <- noise[!labels,]
+      x1 <- noise.augment[labels,]
+      x2 <- noise.augment[!labels,]
       
-      permuted[i,] <- statistics(x1 = x1, 
-                                 x2 = x2,
-                                 Sigma.inv =Sigma.inv, 
-                                 noise = noise,
-                                 labels = labels,
-                                 fold.ids = fold.ids)
+      permuted[i,] <- statisticsNoOracle(x1 = x1, 
+                                         x2 = x2,
+                                         noise = noise, 
+                                         labels = labels, 
+                                         fold.ids = fold.ids)
     } # End permutation
     
     # Compute p-vals for each statistic
@@ -104,13 +108,13 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
   }
 } 
 
-pbPost(type = "note", body = "File40", title = the.message)
+pbPost(type = "note", body = "File2", title = the.message)
 save.image(file=paste(file.name,".RData", sep=''))
 ```
 
-
+## Analysis
 ```{r}
-# load('file40.RData')
+# load('file41.RData')
 source('prepare_graphics.R')
 plot(plot.3)
 ```
@@ -120,32 +124,4 @@ pdf(file = paste('Output/',file.name,'.pdf', sep=''))
 plot(plot.3)
 dev.off()
 ```
-
-There is indeed a problem with p-values:
-
-```{r}
-pvals.melt[effect==0,.(Power=mean(value<0.05)),.(effect,statistic)]
-pvals.melt[effect==0,value,.(effect,statistic)] %>% 
-  ggplot(aes(value))+
-  stat_ecdf(geom = "step")+
-  facet_wrap(~statistic)
-```
-
-     effect     statistic Power
- 1:      0    Oracle.Cov 0.050
- 2:      0     Hotelling 0.051
- 3:      0       Schafer 0.049
- 4:      0        Goeman 0.050
- 5:      0    Srivastava 0.050
- 6:      0       Gretton 0.057
- 7:      0          dCOV 0.051
- 8:      0         Simes 0.058
- 9:      0           Cai 0.050
-10:      0      lda.CV.1 0.047
-11:      0    lda.noCV.1 0.023
-12:      0   svm.CV.c100 0.038
-13:      0   svm.CV.c001 0.053
-14:      0    svm.CV.cCV 0.043
-15:      0 svm.noCV.c100 0.000
-16:      0 svm.noCV.c001 0.037
 
