--- a/Round4/Manuscript/supplementary.tex
+++ b/Round4/Manuscript/supplementary.tex
@@ -51,8 +51,8 @@ The results, reported in Figure~\ref{fig:large-sample}, are qualitatively simila
 In particular with respect to the dominance of two-group tests. 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.5\columnwidth]{"art/file1"}
-	\caption{\textbf{Large sample}: The basic simulation setup scaled ten-fold: $n=400; p=230$.}
+	\includegraphics[width=0.45\columnwidth]{"art/file1"}
+	\caption{[TODO:update]\textbf{Large sample}: The basic simulation setup scaled ten-fold: $n=400; p=230$.}
 	\label{fig:large-sample}
 \end{figure}
 
@@ -62,8 +62,8 @@ In particular with respect to the dominance of two-group tests.
 
 %%%% Sphericity
 \section{Departure From Sphericity}
-In the main text, we have departed from the sphericity assumption, by allowing $\Sigma$ to be an $AR(1)$ covariance. 
-We try other covariance structures: a long-memory Brownian motion correlation structure, and an arbitrary (random) covariance structure. 
+In the main text we have departed from the sphericity assumption by allowing $\Sigma$ to be an $AR(1)$ covariance. 
+We now try other covariance structures: a long-memory Brownian motion correlation, and an arbitrary (random) covariance structure. 
 As seen in Figures \ref{fig:dependence_2} and \ref{fig:dependence_3}, our findings hold for these correlation structures. 
 In particular: two-group tests dominate accuracy tests, and signal is masked in the low PCs of the noise. 
 
@@ -83,12 +83,6 @@ In particular: two-group tests dominate accuracy tests, and signal is masked in 
 		\caption{Signal in direction of lowest lowest variance PC of $\Sigma$.} 
 		\label{fig:dependence_22}
 	\end{subfigure}
-	%	\begin{subfigure}[t]{.3\columnwidth}
-	%		\centering
-	%		\includegraphics[width=1\columnwidth]{"art/file16"}
-	%		\caption{Signal in direction of identity vector.} 
-	%		\label{fig:dependence_23}
-	%	\end{subfigure}
 	\caption{Long-memory Brownian motion correlation: $\Sigma=D^{-1} R D^{-1}$ where $D$ is diagonal with $D_{jj}=\sqrt{R_{jj}}$, and $R_{k,l}=\min\{k,l\}$.}	
 	\label{fig:dependence_2}
 \end{figure}
@@ -138,13 +132,13 @@ These include logistic regression, and a mixture class.
 \subsection{Logistic Regression}
 
 In Figure~\ref{fig:logistic-main-and-interactions} we report the usual power simulation, when generating from a logistic regression setup with both main effects, and second order interactions.
-This setup is also reported in the main text.
+This exact setup is also reported in the main text.
 
 Formally, the logistic assumption implies that 
 $P(y=1|x)=\exp(\eta)/[1+\exp(\eta)]$.
 Main-effects and second order interaction imply that 
-$\eta=x'\beta+x'Bx$, for some $p$-vector $\beta$, and symmetric matrix $B$.
-We also assume $X\sim \mathcal{N}(0,I_{p\times p})$.
+$\eta=x'\beta+x'Bx$, for some $p$-vector $\beta$, and symmetric $p \times p$ matrix $B$.
+We also assume $x\sim \mathcal{N}(0,I_{p\times p})$.
 We perform the various tests in the original space, $x$, but also in the augmented space of second order interactions: 
 $$\tilde{x}:=\Phi(x)=(x_1,\dots,x_j,\dots,x_p,\dots,x_1x_1,\dots x_jx_{j'},\dots,x_p x_p).$$
 
@@ -153,13 +147,13 @@ $$\tilde{x}:=\Phi(x)=(x_1,\dots,x_j,\dots,x_p,\dots,x_1x_1,\dots x_jx_{j'},\dots
 	\centering
 	\begin{subfigure}[t]{.45\columnwidth}
 		\centering
-		\includegraphics[width=1\columnwidth]{"art/file42"}
+		\includegraphics[width=1\columnwidth]{"art/file41"}
 		\caption{Data analyzed in the original space ($x$).}
 		\label{fig:interactions-in-original-space}
 	\end{subfigure}
 	\begin{subfigure}[t]{.45\columnwidth}
 		\centering
-		%	TODO: \includegraphics[width=1\columnwidth]{"art/file42"}
+		%	TODO: \includegraphics[width=1\columnwidth]{"art/file45"}
 		\caption{Data analyzed in augmented interactions space ($\tilde x$).}
 		\label{fig:interactions-in-augmented-space}
 	\end{subfigure}
@@ -167,7 +161,7 @@ $$\tilde{x}:=\Phi(x)=(x_1,\dots,x_j,\dots,x_p,\dots,x_1x_1,\dots x_jx_{j'},\dots
 		Data generated via $y|x \sim Binom(1,p(x));
 		p(x)=\exp(\eta)/[1+\exp(\eta)];
 		\eta=x'\beta+x'Bx; 
-		X\sim \mathcal{N}(0,I_{p\times p})$. } 
+		x\sim \mathcal{N}(0,I_{p\times p})$. } 
 	\label{fig:logistic-main-and-interactions}
 \end{figure}
 
@@ -176,10 +170,11 @@ $$\tilde{x}:=\Phi(x)=(x_1,\dots,x_j,\dots,x_p,\dots,x_1x_1,\dots x_jx_{j'},\dots
 
 
 The logistic assumption differs from our original setup in that it states $y|x$, instead of $x|y$. 
+In the terms of \cite{ng2002discriminative}, the logistic is a \emph{discriminative model} whereas Fisher's LDA is a \emph{generative model}.
 The logistic assumption implies that $x_0$ is no longer a shifted versions of $x_1$, even in the presence of main effects alone ($B=0$).
 While not a ``pure shift'', the logistic model with main effects has a strong shift component. 
 We thus expect it to behave like the basic setup. 
-This is verified in Figure \ref{fig:logistic-main-only}.
+This is verified in Figure \ref{fig:logistic-main-only}, where two-group tests dominate accuracy-tests in the original space, and in the augmented space. 
 
 
 
@@ -194,16 +189,16 @@ This is verified in Figure \ref{fig:logistic-main-only}.
 	\end{subfigure}
 	\begin{subfigure}[t]{.45\columnwidth}
 		\centering
-		%	TODO: \includegraphics[width=1\columnwidth]{"art/file42"}
+		%	TODO: \includegraphics[width=1\columnwidth]{"art/file44"}
 		\caption{Data analyzed in augmented interactions space ($\tilde x$).}
 		\label{fig:main-only-augmented-space}
 	\end{subfigure}
 	\caption{\textbf{Logistic Regression. Main effects only.} 
 	Data generated via 
-	$Y|x \sim Binom(1,p(x));
+	$y|x \sim Binom(1,p(x));
 	p(x)=\exp(\eta)/[1+\exp(\eta)];
 	\eta=x'\beta; 
-	X\sim \mathcal{N}(0,I_{p\times p})$.  } 
+	x\sim \mathcal{N}(0,I_{p\times p})$.  } 
 	\label{fig:logistic-main-only}
 \end{figure}
 
@@ -214,13 +209,12 @@ This is verified in Figure \ref{fig:logistic-main-only}.
 
 It is possible to use the logistic setup to generate data with no shift at all. 
 For instance, if effects have a quadratic form in link scale: $\eta=\beta_0+x'x$. 
-In this case, $x_1$ is akin to a rescaling of $x_0$.
 This is depicted for $p=2$ in Figure~\ref{fig:quadratic-form}.
 This example is typically encountered in the machine learning literature, to motivate learning with kernels. 
 
-When analyzing the quadratic form logistic regression we need to distinguish between analysis in the original $x$ space, and in the augmented interaction space. 
-In the original space, $x_1$ is more akin to a rescaling of $x_0$ than a shift.
-In the augmented space $\tilde{x}$, $x_1$ is more akin to a shifting of $x_0$. 
+We need to distinguish between analysis in the original $x$ space, and in the augmented interaction space. 
+In the original space, $x_1$ is more akin to a \emph{rescaling} of $x_0$ than a shift.
+In the augmented space $\tilde{x}$, $x_1$ is more akin to a \emph{shifting} of $x_0$. 
 We thus expect that all tests will perform poorly in the original space, and two-group tests to dominate in the augmented space. 
 This is confirmed in Figure~\ref{fig:logistic-interactions-only}.
 
@@ -229,7 +223,8 @@ This is confirmed in Figure~\ref{fig:logistic-interactions-only}.
 	\begin{subfigure}[t]{.3\columnwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{art/quadratic-form}
-		\caption{Illustration with $p=2$.}
+		\caption{Illustration with $p=2$. 
+			$y=1$ in red squares. $y=0$ in black rhombus.}
 		\label{fig:quadratic-form}
 	\end{subfigure}
 	\begin{subfigure}[t]{.3\columnwidth}
@@ -244,14 +239,12 @@ This is confirmed in Figure~\ref{fig:logistic-interactions-only}.
 	\caption{Detection power in \textbf{augmented} space.} 
 	\label{fig:logistic-interactions-only-augmented}
 	\end{subfigure}
-	\caption{\textbf{Logistic Regression. No main effects.}
-		An example of a ``pure rescaling'', with no shift.
-		First class in red squares. Second class in black rhombus.
+	\caption{\textbf{Logistic regression. Second order interactions only.}
 		Data generated via 
-		$Y|x \sim Binom(1,p(x));
+		$y|x \sim Binom(1,p(x));
 		p(x)=\exp(\eta)/[1+\exp(\eta)];
 		\eta=\beta_0+x'x; 
-		X \sim \mathcal{N}(0,\sigma^2 I_{p\times p})$.
+		x \sim \mathcal{N}(0,\sigma^2 I_{p\times p})$.
 	}
 	\label{fig:logistic-interactions-only}
 \end{figure}
@@ -271,7 +264,7 @@ They find that the power increases with the size of the test set.
 This is seen in Fig.4 of \cite{golland_permutation_2005}, where the size of the test-set, $K$, governs the discretization. 
 We attribute this to the reduced discretization of the accuracy statistic.
 
-When discussing the power of the resubstitution accuracy, \cite{golland_permutation_2005} simulate power by sampling from a Gaussian mixture family of models, and not from a location family as our own simulations. 
+When discussing the power of the resubstitution accuracy, \cite{golland_permutation_2005} simulate power by sampling from a Gaussian mixture family of models. 
 Under their model (with some abuse of notation)
 \begin{align*}
 \begin{split}
@@ -300,6 +293,92 @@ From Figure~\ref{fig:file12}, we see that for the mixture class of \cite{golland
 		The effect, $\pi$, is color and shape coded and varies over $0$ (red circle), $1/4$ (green triangle) and $1/2$ (blue square). }
 	\label{fig:file12}
 \end{figure}
+
+
+
+
+\section{Fixed SNR}
+\label{sec:fix_snr}
+
+For a fair comparison between simulations, in particular between those with different $\Sigma$, we needed to fix the difficulty of the problem.
+We fix the Kullback–Leibler Divergence between distributions of sample means. 
+Formally, the Kullback–Leibler Divergence between two Gaussian populations is given by 
+\begin{align}
+\label{eq:KLD}
+KL[x_1,x_0]=\frac{1}{2}\left(
+\log \frac{\det \Sigma_0}{\det \Sigma_1}-p+Tr(\Sigma_0^{-1}\Sigma_1)+(\mu_0-\mu_1)'\Sigma^{-1}_0(\mu_0-\mu_1)
+\right),
+\end{align}
+where $x_y\sim\mathcal{N}(\mu_y,\Sigma_y)$.
+In the case of the sample means of two shifted groups of size $n$, then 
+\begin{align}
+\label{eq:mahalanobis}
+KL[\bar x_1,\bar x_0]=
+\frac{n}{2}\mu'\Sigma^{-1}\mu=
+\frac{n}{2}\Vert \mu \Vert_\Theta^2,
+\end{align}
+where $\mu:=\mu_1-\mu_0$. 
+%For spherical populations, $\Sigma=I$, and thus $\Vert \mu \Vert_\Theta^2=\Vert \mu \Vert_2^2$.
+%For a dense shift of equal magnitude, $\mu=(c,\dots,c)$, so that $\Vert \mu \Vert_2^2=p \, c^2$. 
+
+In most of our simulations we fixed $n \Vert \mu \Vert_\Theta^2$. 
+The logistic regression setup is an exception because... [TODO: relate to logistic regression]
+
+Fixing $n \Vert \mu \Vert_\Theta^2$ implies that the Euclidean norm of $\mu$ varies with $\Sigma$, with the sample size, and with the direction of the signal.
+An initial intuition may suggest that detecting signal in the low variance PCs is easier than in the high variance PCs. 
+This is true when fixing $\Vert \mu \Vert_2$, but not when fixing $\Vert \mu \Vert_{\Theta}$.
+
+For completeness, Figure~\ref{fig:dependence_4} reports the power analysis under $AR(1)$ correlations, but with $\Vert \mu \Vert_2$ fixed.
+We compare the power of a shift in the direction of some high variance PC (Figure~\ref{fig:dependence_41}), versus a shift in the direction of a low variance PC (Figure~\ref{fig:dependence_42}).
+The intuition that it is easier to detect signal in the low variance directions is confirmed. 
+
+\begin{figure}[h]
+	\centering
+	\begin{subfigure}[t]{.45\columnwidth}
+		\centering
+		\includegraphics[width=1\columnwidth]{"art/file32"}
+		\caption{$\mu$ in PC7 of $\Sigma$.}  
+		\label{fig:dependence_41}	
+	\end{subfigure}
+	\begin{subfigure}[t]{0.45\columnwidth}
+		\centering
+		\includegraphics[width=1\columnwidth]{"art/file31"}
+		\caption{$\mu$ in PC15 of $\Sigma$.}  
+		\label{fig:dependence_42}	
+	\end{subfigure}
+	\caption{Short memory, AR(1) correlation. $\Vert \mu \Vert_2$ fixed. }	
+	\label{fig:dependence_4}		
+\end{figure}
+
+Other authors have also observed the need for fixing the SNR for a fair comparison between tests.
+In \cite{ramdas2015decreasing}, authors prefer to use sparse alternatives.
+With sparse alternatives, the difficulty of the problem is governed by the sparsity of the signal and not only the dimension of the data. 
+In \cite{chen2010two}, authors fix $\Vert \mu \Vert_2^2/\Vert \Sigma \Vert^2_{Frob}$ where $\Vert \Sigma \Vert^2_{Frob}=\Tr(\Sigma'\Sigma)$ is the Frobenius matrix norm. 
+Clearly, $\Vert \mu \Vert_2^2/\Vert \Sigma \Vert^2_{Frob}$ is invariant to the direction of the signal with respect to the noise. 
+For this reason, we prefer fixing $\Vert \mu \Vert_\Theta$.
+
+
+
+
+
+
+\section{Sparse Alternatives}
+\label{sec:sparse}
+
+In our set of simulations we discussed ``dense'' alternatives.
+Dense alternatives are motivated by neuroimaging where most brain locations in a region carry signal.
+In a genetic application, a sparse alternative may be more plausible. 
+Figure~\ref{fig:sparse} reports power when $\mu$ is sparse. 
+As usual, two-group tests dominate accuracy-tests, only this time, the winners are not the $T^2$ type statistics, but rather, the tests for sparse shifts (\emph{Cai}, \emph{Simes}).
+
+\begin{figure}[h]
+	\centering
+	\centering
+	\includegraphics[width=0.5\columnwidth]{"art/file34"}
+	\caption{Sparse $\mu$.}  
+	\label{fig:sparse}	
+\end{figure}
+
 
 
 
@@ -341,7 +420,7 @@ We also see that two-group tests dominate accuracy-tests also in the heteroskeda
 
 
 
-\subsection{Tie Breaking}
+\section{Tie Breaking}
 \label{sec:ties}
 
 Discrete test statistics lose power by not exhausting the permissible false positive rate. 
@@ -365,86 +444,10 @@ It demonstrates that the power disadvantage of accuracy-tests cannot be remedied
 
 
 
-\section{Sparse Alternatives}
-\label{sec:sparse}
-
-In our set of simulations we discussed ``dense'' alternatives, in the sense that all coordinates carry signal.
-Dense alternatives are motivated by neuroimaging where most brain locations in a region carry signal.
-In a genetic application, a ``sparse'' alternative may be more plausible. 
-Figure~\ref{fig:sparse} reports power when $\mu$ is sparse. 
-As usual, two-group tests dominate accuracy-tests, only this time, the winners are not the $T^2$ type statistics, but rather, the tests for sparse shifts (\emph{Cai}, \emph{Simes}).
-
-\begin{figure}[h]
-	\centering
-	\centering
-	\includegraphics[width=0.5\columnwidth]{"art/file34"}
-	\caption{Sparse $\mu$.}  
-	\label{fig:sparse}	
-\end{figure}
 
 
 
 
-
-\section{Fixed SNR}
-\label{sec:fix_snr}
-
-For a fair comparison between simulations, in particular between those with different $\Sigma$, we needed to fix the difficulty of the problem.
-We fix the Kullback–Leibler Divergence between distributions of sample means. 
-Formally, the Kullback–Leibler Divergence between two Gaussian populations is given by 
-\begin{align}
-\label{eq:KLD}
-	KL[x_1,x_0]=\frac{1}{2}\left(
-	\log \frac{\det \Sigma_0}{\det \Sigma_1}-p+Tr(\Sigma_0^{-1}\Sigma_1)+(\mu_0-\mu_1)'\Sigma^{-1}_0(\mu_0-\mu_1)
-	\right),
-\end{align}
-where $x_y\sim\mathcal{N}(\mu_y,\Sigma_y)$.
-In the case of the sample means of two shifted groups of size $n$, then 
-\begin{align}
-\label{eq:mahalanobis}
-	KL[\bar x_1,\bar x_0]=
-	\frac{n}{2}\mu'\Sigma^{-1}\mu=
-	\frac{n}{2}\Vert \mu \Vert_\Theta^2,
-\end{align}
-where $\mu:=\mu_1-\mu_0$. 
-%For spherical populations, $\Sigma=I$, and thus $\Vert \mu \Vert_\Theta^2=\Vert \mu \Vert_2^2$.
-%For a dense shift of equal magnitude, $\mu=(c,\dots,c)$, so that $\Vert \mu \Vert_2^2=p \, c^2$. 
-
-In most of our simulations we fixed $n \Vert \mu \Vert_\Theta^2$. 
-The logistic regression setup is an exception because... [TODO: relate to logistic regression]
-
-Fixing $n \Vert \mu \Vert_\Theta^2$ implies that the Euclidean norm of $\mu$ varies with $\Sigma$, with the sample size, and with the direction of the signal.
-An initial intuition may suggest that detecting signal in the low variance PCs is easier than in the high variance PCs. 
-This is true when fixing $\Vert \mu \Vert_2$, but not when fixing $\Vert \mu \Vert_{\Theta}$.
-
-For completeness, Figure~\ref{fig:dependence_4} reports the power analysis under $AR(1)$ correlations, but with $\Vert \mu \Vert_2$ fixed.
-We compare the power of a shift in the direction of some high variance PC (Figure~\ref{fig:dependence_41}), versus a shift in the direction of a low variance PC (Figure~\ref{fig:dependence_42}).
-The intuition that it is easier to detect signal in the low variance directions is confirmed. 
-
-\begin{figure}[h]
-	\centering
-	\begin{subfigure}[t]{.45\columnwidth}
-		\centering
-		\includegraphics[width=1\columnwidth]{"art/file32"}
-		\caption{$\mu$ in PC7 of $\Sigma$.}  
-		\label{fig:dependence_41}	
-	\end{subfigure}
-	\begin{subfigure}[t]{0.45\columnwidth}
-		\centering
-		\includegraphics[width=1\columnwidth]{"art/file31"}
-		\caption{$\mu$ in PC15 of $\Sigma$.}  
-		\label{fig:dependence_42}	
-	\end{subfigure}
-	\caption{Short memory, AR(1) correlation. $\Vert \mu \Vert_2$ fixed. }	
-	\label{fig:dependence_4}		
-\end{figure}
-
-Other authors have also observed the need for fixing the SNR for a fair comparison between tests.
-In \cite{ramdas2015decreasing}, authors prefer to use sparse alternatives.
-With sparse alternatives, the difficulty of the problem is governed by the sparsity of the signal and not only the dimension of the data. 
-In \cite{chen2010two}, authors fix $\Vert \mu \Vert_2^2/\Vert \Sigma \Vert^2_{Frob}$ where $\Vert \Sigma \Vert^2_{Frob}=\Tr(\Sigma'\Sigma)$ is the Frobenius matrix norm. 
-Clearly, $\Vert \mu \Vert_2^2/\Vert \Sigma \Vert^2_{Frob}$ is invariant to the direction of the signal with respect to the noise. 
-For this reason, we prefer fixing $\Vert \mu \Vert_\Theta$.
 
 
 
