--- a/Round4/file44.Rmd
+++ b/Round4/file44.Rmd
@@ -24,14 +24,18 @@ n.folds <- 4
 source('Gilron Effect of Cross Validatino.R')
 
 Sigma <- diag(p)
-# Sigma.inv <- solve(Sigma)
+Sigma.inv <- solve(Sigma)
 beta0 <- rnorm(p)
 effects <- c(0,1,2)
 ```
 
 ```{r}
-noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
-noise.augment <- model.matrix(~.^2, as.data.frame(noise))
+noise <- matrix(rnorm(n*4e3*p), ncol=p, nrow=n*4e3)
+noise.augment <- model.matrix(~.^2-1, as.data.frame(noise))
+Sigma.augment <- cov(noise.augment) %>% round(0) %>% as("dsCMatrix")
+sum(Sigma.augment)
+Sigma.augment.inverse <- solve(Sigma.augment)
+sum(Sigma.augment.inverse)
 ```
 
 
@@ -50,13 +54,11 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     noise <- matrix(rnorm(n*p), ncol=p, nrow=n)
     noise.augment <- model.matrix(~.^2, as.data.frame(noise))
 
-
     ## Logistic regression
     # effect <- effects[[3]]
     beta <- beta0*effect
     link <- noise%*%beta
     probs <- plogis(link)
-    # plot(probs, type='h')
     
     # Force balanced groups:
     labels <- c(TRUE,FALSE)[rbinom(n,1, probs)+1] # group assignemt labels
@@ -72,7 +74,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     # Observables 
     ts <-statistics(x1 = x1, 
                     x2 = x2, 
-                    Sigma.inv = Sigma.inv, 
+                    Sigma.inv = Sigma.augment.inverse, 
                     noise = noise.augment, 
                     labels = labels, 
                     fold.ids = fold.ids)
@@ -94,7 +96,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       
       permuted[i,] <- statistics(x1 = x1, 
                                  x2 = x2,
-                                 Sigma.inv =Sigma.inv, 
+                                 Sigma.inv =Sigma.augment.inverse, 
                                  noise = noise.augment,
                                  labels = labels,
                                  fold.ids = fold.ids)
@@ -112,13 +114,13 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
   }
 } 
 
-pbPost(type = "note", body = "File40", title = the.message)
+pbPost(type = "note", body = "File44", title = the.message)
 save.image(file=paste(file.name,".RData", sep=''))
 ```
 
 
 ```{r}
-# load('file40.RData')
+# load('file44.RData')
 source('prepare_graphics.R')
 plot(plot.3)
 ```
