fixing SNR in code

--- a/Round4/Manuscript/permutaing_accuracy.tex
+++ b/Round4/Manuscript/permutaing_accuracy.tex
@@ -351,7 +351,7 @@ In this basic setup, reported in Figure~\ref{fig:simulation_1}, the shift effect
 Shifts are dense and equal in all $p$ coordinates of $\mu$.
 We set $\mu:=c \, e$ where $e$ is a $p$-vector of ones. 
 We will use $c$ to index the signal's strength, and vary it over $c \in \set{0,1/4,1/2}$.
-With $\Sigma=I$ then the (squared) Euclidean and Mahalanobis norms of the signal are $\Vert \mu \Vert_2^2=\Vert \mu \Vert_\Theta^2=\mu' \Sigma^{-1} \mu= c^2 p\approx \{0,1.4,5.7\}$, where $\Theta:=\Sigma^{-1}$. 
+With $\Sigma=I$ then the (squared) Euclidean and Mahalanobis norms of the signal are $\Vert \mu \Vert_2^2=\Vert \mu \Vert_\Theta^2=\mu' \Sigma^{-1} \mu= c^2 p\approx \{0,1.4,5.7\}$ [TODO:verify], where $\Theta:=\Sigma^{-1}$. 
 These can be thought as the SNR. 
 
 Having generated the data, we compute each of the test statistics in Table~\ref{tab:collected}.
